Правки по стайл гайду

--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -4,6 +4,5 @@
   padding: 0;
   padding-top: 22px;
 
-  box-shadow: 0 1px 0 0 #ececec,
-  inset 0 1px 0 0 #ececec;
+  box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
 }
