--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -1,5 +1,5 @@
 .site-list {
-  font-family: "OpenSansBold", Arial, serif;
+  font-family: $font-bold;
   font-weight: bold;
   font-size: 17px;
   line-height: 24px;
@@ -10,8 +10,7 @@
   margin: 0;
   padding: 0;
 
-  box-shadow: 0 1px 0 0 #cecece,
-  inset 0 1px 0 0 #cecece;
+  box-shadow: 0 1px 0 0 #cecece, inset 0 1px 0 0 #cecece;
 }
 
 .site-list__item a {
