--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -6,8 +6,8 @@
 }
 
 @font-face {
-  font-family: "OpenSansBold";
+  font-family: "OpenSans";
   src: url("../fonts/opensansbold.woff") format("woff"), url("../fonts/opensansbold.woff2") format("woff2");
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal;
 }
