--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,2 +1,3 @@
-$font-normal: "OpenSans", "Arial", serif;
-$font-bold: "OpenSansBold", "Arial", serif;
+$font: "OpenSans", "Arial", serif;
+$tablet-width: 772px;
+$desktop-width: 1150px;
