--- a/source/sass/buy-form.scss
+++ b/source/sass/buy-form.scss
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 30px 30px 50px 30px;
 
-  font-family: $font-bold;
+  font-family: $font;
+  font-weight: bold;
 }
 
 .buy-form__text {
@@ -20,7 +21,7 @@
   margin-bottom: 25px;
   padding: 0;
 
-  font-family: $font-normal;
+  font-family: $font;
   font-size: 15px;
   line-height: 30px;
   color: #444444;
@@ -37,9 +38,10 @@
   margin: 0;
   padding: 20px 35px;
 
-  font-family: $font-bold;
+  font-family: $font;
   font-size: 17px;
   line-height: 16px;
+  font-weight: bold;
   color: #444444;
 
   border: 2px solid rgba(68, 68, 68, 0.1);
@@ -49,9 +51,10 @@
   margin: 0;
   padding: 20px 82px;
 
-  font-family: $font-bold;
+  font-family: $font;
   font-size: 17px;
   line-height: 16px;
+  font-weight: bold;
   color: #ffffff;
   text-transform: uppercase;
 
