--- a/source/sass/catalog-product.scss
+++ b/source/sass/catalog-product.scss
@@ -6,9 +6,10 @@
   margin: 0;
   padding: 0;
 
-  font-family: $font-bold;
+  font-family: $font;
   font-size: 17px;
   line-height: 24px;
+  font-weight: bold;
   color: #000000;
 }
 
@@ -18,15 +19,16 @@
 }
 
 .catalog-product__legend {
-  font-family: $font-normal;
+  font-family: $font;
   font-size: 13px;
   line-height: 30px;
   color: #444444;
 }
 
 .catalog-product__price {
-  font-family: $font-bold;
+  font-family: $font;
   font-size: 15px;
   line-height: 24px;
+  font-weight: bold;
   color: #000000;
 }
