--- a/source/sass/copyright.scss
+++ b/source/sass/copyright.scss
@@ -2,8 +2,9 @@
   margin: 0;
   padding: 0;
 
-  font-family: $font-bold;
+  font-family: $font;
   font-size: 19px;
   line-height: 18px;
+  font-weight: bold;
   color: #000000;
 }
