--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -5,6 +5,10 @@
   background-color: #f1f1f1;
 }
 
+.page-footer__image {
+  display: none;
+}
+
 .page-footer__social {
   margin: 0;
   margin-bottom: 25px;
@@ -12,4 +16,32 @@
 
   list-style: none;
   box-shadow: 0 1px 0 0 #cecece;
+}
+
+@media (min-width: $tablet-width) {
+  .page-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 668px;
+    padding: 23px 52px;
+    margin: 0 auto;
+  }
+
+  .page-footer__image {
+    display: block;
+  }
+
+  .page-footer__social {
+    margin: 0;
+    box-shadow: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer {
+    width: 1050px;
+    padding: 23px 50px;
+  }
 }
