--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -1,8 +1,8 @@
 .page-header {
-  font-family: "OpenSans", "Arial", serif;
-  margin: 0 1px;
-  padding: 0;
-  padding-top: 22px;
+  font-family: $font;
+  margin: 0;
+  padding: 0 1px;
 
+  background-color: #ffffff;
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
 }
