--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -1,23 +1,38 @@
 .page-main {
-  margin: 0 1px;
+  margin: 0 auto;
   padding: 0;
   padding-top: 70px;
 
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 0 -10px;
+  background-position: center -20px;
 }
 
 .page-main__slogan {
   margin: 0;
   margin-bottom: 120px;
   padding: 0;
-  font-family: "OpenSansBold", "Arial", serif;
+  font-family: $font;
   font-size: 27px;
   line-height: 30px;
+  font-weight: bold;
   color: #010000;
+
+  text-align: center;
 }
 
 .page-main .visually-hidden {
   display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .page-main__slogan {
+    margin-bottom: 370px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-main__slogan {
+    margin-bottom: 350px;
+  }
 }
