--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -1,5 +1,9 @@
 .site-list {
-  font-family: $font-bold;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  font-family: $font;
   font-weight: bold;
   font-size: 17px;
   line-height: 24px;
@@ -10,28 +14,37 @@
   margin: 0;
   padding: 0;
 
-  box-shadow: 0 1px 0 0 #cecece, inset 0 1px 0 0 #cecece;
+  box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
 }
 
 .site-list__item a {
+  display: inline-block;
   margin: 0;
-  padding: 0;
+  padding: 30px 10px 30px 76px;
+  width: 100%;
   color: inherit;
   text-decoration: none;
+  vertical-align: middle;
 }
 
-.site-list__item form {
-  margin: 0;
-  padding: 0;
+@media (min-width: $tablet-width) {
+  .site-list {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+  }
+
+  .site-list__item {
+    box-shadow: none;
+  }
+
+  .site-list__item a {
+    padding: 0;
+  }
 }
 
-.site-list__item input {
-  margin: 0;
-  padding: 0;
-  font-family: inherit;
-  font-weight: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  color: inherit;
-  border: none;
+@media (min-width: $desktop-width) {
+  .site-list {
+    font-size: 17px;
+  }
 }
