--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,11 @@
 @import "fonts.scss";
+@import "scaffolding.scss";
 @import "variables.scss";
 @import "page-header.scss";
 @import "main-nav.scss";
 @import "site-list.scss";
+@import "user-list.scss";
+@import "action-list.scss";
 @import "page-main.scss";
 @import "product.scss";
 @import "product-hit.scss";
