--- a/source/sass/catalog-main.scss
+++ b/source/sass/catalog-main.scss
@@ -1,5 +1,5 @@
 .catalog-main {
-  width: 100%;
+  width: 320px;
   margin: 0 auto;
   padding: 0 1px;
 }
@@ -30,12 +30,13 @@
 
 .catalog-main__item {
   width: 260px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
 @media (min-width: $tablet-width) {
   .catalog-main {
+    width: 772px;
     margin: 0 auto;
   }
 
@@ -59,6 +60,10 @@
 }
 
 @media (min-width: $desktop-width) {
+  .catalog-main {
+    width: 1150px;
+  }
+
   .catalog-main__title {
     width: 1050px;
     margin: 0 auto;
@@ -73,9 +78,6 @@
     padding: 111px 50px 57px 50px;
     flex-direction: row;
     justify-content: space-between;
-  }
-
-  .catalog-main__item {
-    width: 316px;
+    align-items: flex-start;
   }
 }
