--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -1,4 +1,6 @@
 .page-main {
+  width: 322px;
+
   margin: 0 auto;
   padding: 0;
   padding-top: 70px;
@@ -26,13 +28,32 @@
 }
 
 @media (min-width: $tablet-width) {
+  .page-main {
+    width: 772px;
+    padding-top: 95px;
+  }
+
   .page-main__slogan {
+    width: 530px;
+    margin: 0 auto;
     margin-bottom: 370px;
+
+    font-size: 43px;
+    line-height: 50px;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .page-main {
+    width: 1150px;
+    padding-top: 100px;
+  }
+
   .page-main__slogan {
+    width: 650px;
     margin-bottom: 350px;
+
+    font-size: 53px;
+    line-height: 57px;
   }
 }
