--- a/source/sass/product.scss
+++ b/source/sass/product.scss
@@ -1,6 +1,6 @@
 .product {
-  width: 100%;
-  margin: 0 auto;
+  width: 320px;
+  margin: 0;
   padding: 0 1px;
 }
 
@@ -54,6 +54,9 @@
   }
 
   .product__image {
+    padding: 34px 180px 34px 36px;
+    margin: 0;
+
     font-size: 20px;
     line-height: 30px;
   }
@@ -63,5 +66,12 @@
   .product {
     width: 1050px;
     padding: 0 50px;
+  }
+
+  .product__image {
+    padding-right: 380px;
+
+    font-size: 20px;
+    line-height: 30px;
   }
 }
