--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -1,8 +1,5 @@
 .site-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-
+  width: 320px;
   font-family: $font;
   font-weight: bold;
   font-size: 17px;
@@ -10,41 +7,65 @@
   color: #000000;
 }
 
-.site-list__item {
-  margin: 0;
-  padding: 0;
-
-  box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
-}
-
 .site-list__item a {
-  display: inline-block;
+  display: block;
   margin: 0;
   padding: 30px 10px 30px 76px;
-  width: 100%;
   color: inherit;
   text-decoration: none;
   vertical-align: middle;
+
+  box-sizing: border-box;
+  box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
 
 @media (min-width: $tablet-width) {
   .site-list {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 360px;
+    padding-left: 52px;
     font-size: 15px;
-  }
 
-  .site-list__item {
-    box-shadow: none;
+    box-sizing: border-box;
   }
 
   .site-list__item a {
-    padding: 0;
+    padding: 20px 0;
+    box-shadow: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .site-list {
+    justify-content: flex-start;
+    width: 500px;
+
     font-size: 17px;
+
+    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .site-list__item a {
+    padding: 32px 0;
+    padding-right: 35px;
+  }
+
+  .site-list__item:nth-child(2n) a {
+    padding-left: 35px;
+  }
+
+  .site-list__item:first-child a {
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
   }
 }
