--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
 @import "fonts.scss";
+@import "normalize.scss";
 @import "scaffolding.scss";
 @import "variables.scss";
 @import "page-header.scss";
@@ -15,3 +16,4 @@
 @import "buy-form.scss";
 @import "catalog-main.scss";
 @import "catalog-product.scss";
+@import "social.scss";
