--- a/source/sass/user-list.scss
+++ b/source/sass/user-list.scss
@@ -1,24 +1,34 @@
 .user-list {
-  margin: 0;
-  padding: 0;
-
   list-style: none;
 }
 
 .user-list__item {
   margin: 0;
   padding: 30px 10px 30px 76px;
-  width: 100%;
 
   font-size: 17px;
   line-height: 24px;
 
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
 
-.user-list__item form {
-  margin: 0;
-  padding: 0;
+.user-list__item a {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 17px;
+  line-height: 24px;
+}
+
+.user-list__toggle {
+  display: none;
 }
 
 .user-list__item input {
@@ -34,12 +44,58 @@
 
 @media (min-width: $tablet-width) {
   .user-list {
+    position: relative;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .user-list__toggle {
+    display: block;
+    width: 82px;
+
+    background: none;
+    border: none;
+    box-sizing: border-box;
+  }
+
+  .user-list__item input {
+    display: none;
+    position: absolute;
+    top: 40px;
+    padding: 10px;
+
+    border: 1px solid #444444;
   }
 
   .user-list__item {
     padding: 0;
     box-shadow: none;
+  }
+
+  .user-list__item a {
+    padding-left: 81px;
+    padding-top: 30px;
+    padding-bottom: 29px;
+
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .user-list__item:hover input {
+    display: block;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .user-list {
+    width: 400px;
+  }
+
+  .user-list__item a {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
