Внесение правок по заданию

--- a/source/sass/catalog-main.scss
+++ b/source/sass/catalog-main.scss
@@ -78,6 +78,6 @@
     padding: 111px 50px 57px 50px;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: stretch;
   }
 }
