--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -1,24 +1,25 @@
 .page-header {
+  position: relative;
   width: 320px;
   margin: 0 auto;
-  padding: 0 1px;
+  padding: 0;
 
   font-family: $font;
 
-  background-color: #ffffff;
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
+  z-index: 2;
 }
 
 @media (min-width: $tablet-width) {
   .page-header {
-    width: 772px;
-    padding: 0;
+    width: 668px;
+    padding: 0 50px;
     box-shadow: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .page-header {
-    width: 1150px;
+    width: 1050px;
   }
 }
