--- a/source/sass/copyright.scss
+++ b/source/sass/copyright.scss
@@ -2,11 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 25px 0 30px 0;
+  padding: 19px 0 30px 0;
 }
 
 .copyright__text {
   margin: 0;
+  margin-top: -6px;
   padding: 0;
 
   font-family: $font;
@@ -17,9 +18,16 @@
 }
 
 .copyright a {
-  margin-left: 30px;
+  margin-left: 29px;
+  margin-top: 5px;
 }
 
 .copyright svg {
   fill: #63d1bb;
+}
+
+@media (min-width: $tablet-width) {
+  .copyright {
+    margin-top: 19px;
+  }
 }
