--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -16,7 +16,7 @@
   display: inline-block;
   align-self: center;
   margin: 0;
-  padding: 22px 0;
+  padding: 22px 0 19px 0;
   width: 86px;
 }
 
@@ -131,14 +131,14 @@
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    width: 772px;
+    width: 668px;
   }
 
   .main-nav__logo {
-    width: 373px;
-    padding: 22px 10px 22px 52px;
+    width: 321px;
+    min-height: 88px;
+    padding: 22px 0;
     box-sizing: border-box;
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   }
 
   .main-nav__toggle {
@@ -147,8 +147,7 @@
 
   .main-nav__user {
     display: block;
-    width: 399px;
-    padding-right: 52px;
+    width: 347px;
     order: 2;
     box-sizing: border-box;
   }
@@ -163,7 +162,6 @@
     order: 4;
     display: block;
     margin: 0;
-    padding-right: 52px;
 
     font-size: 15px;
     line-height: 24px;
@@ -174,7 +172,7 @@
 
 @media (min-width: $desktop-width) {
   .main-nav {
-    width: 1150px;
+    width: 1050px;
   }
 
   .main-nav__list {
@@ -182,7 +180,7 @@
   }
 
   .main-nav__logo {
-    width: 250px;
+    width: 200px;
     padding: 9px 0 7px 0;
     min-height: 88px;
     order: 2;
