--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -1,59 +1,39 @@
 .page-main {
-  width: 322px;
-
+  width: 320px;
   margin: 0 auto;
   padding: 0;
-  padding-top: 70px;
+}
 
+.page-main__wrapper {
+  position: relative;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center -20px;
-}
-
-.page-main__slogan {
-  margin: 0;
-  margin-bottom: 120px;
-  padding: 0;
-  font-family: $font;
-  font-size: 27px;
-  line-height: 30px;
-  font-weight: bold;
-  color: #010000;
-
-  text-align: center;
-}
-
-.page-main .visually-hidden {
-  display: none;
+  background-position: center -18px;
+  z-index: 0;
 }
 
 @media (min-width: $tablet-width) {
   .page-main {
-    width: 772px;
-    padding-top: 95px;
+    width: 100%;
   }
 
-  .page-main__slogan {
-    width: 530px;
-    margin: 0 auto;
-    margin-bottom: 370px;
+  .page-main__wrapper {
+    position: relative;
+    margin-top: -58px;
 
-    font-size: 43px;
-    line-height: 50px;
+    background-image: url("../img/hero-tablet@1x.jpg");
+    background-position: center 0;
+    background-size: cover;
+
+    box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
   }
 }
 
 @media (min-width: $desktop-width) {
-  .page-main {
-    width: 1150px;
-    padding-top: 100px;
-  }
+  .page-main__wrapper {
+    position: relative;
+    margin-top: -65px;
 
-  .page-main__slogan {
-    width: 650px;
-    margin-bottom: 350px;
-
-    font-size: 53px;
-    line-height: 57px;
+    background-image: url("../img/hero-desktop@1x.jpg");
   }
 }
