--- a/source/sass/product-hit.scss
+++ b/source/sass/product-hit.scss
@@ -1,11 +1,22 @@
+.product-hit__wrapper {
+  background-image: url("../img/bg-zigzag-line.svg");
+  background-repeat: repeat-x;
+  background-position: bottom;
+  background-size: auto 6px;
+}
+
 .product-hit {
+  width: 320px;
   font-family: $font;
   margin: 0;
-  padding: 30px;
+  padding: 26px 30px 40px 30px;
+
+  box-sizing: border-box;
 }
 
 .product-hit__title {
   margin: 0;
+  margin-bottom: 5px;
   padding: 0;
 
   font-family: $font;
@@ -17,7 +28,7 @@
 .product-hit__best-product {
   display: inline-block;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 23px;
   padding: 0;
 
   font-family: $font;
@@ -30,7 +41,7 @@
 
 .product-hit__legend {
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 17px;
   padding: 0;
 
   font-size: 15px;
@@ -39,13 +50,14 @@
 }
 
 .product-hit__table {
-  border: collapse;
+  border-collapse: collapse;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
   padding: 0;
+  width: 100%;
 
   font-size: 15px;
-  line-height: 24px;
+  line-height: 20px;
   color: #444444;
 }
 
@@ -53,15 +65,25 @@
   box-shadow: 0 1px 0 0 #cecece;
 }
 
-.product-hit__promo {
+.product-hit__field {
+  width: 38%;
+}
+
+.product-hit__value {
+  width: 62%;
+}
+
+.product-hit__table td {
   margin: 0;
   padding: 0;
+  padding-top: 9px;
+  padding-bottom: 11px;
 }
 
 .product-hit__image {
   width: 260px;
   height: 315px;
-  margin-bottom: 25px;
+  margin-bottom: 22px;
 }
 
 .product-hit__price {
@@ -73,6 +95,7 @@
   line-height: 24px;
   font-weight: bold;
   color: #444444;
+  text-align: center;
 }
 
 .product-hit .button {
@@ -80,7 +103,7 @@
   vertical-align: middle;
   margin: 0;
   margin-top: 25px;
-  padding: 15px 84px;
+  padding: 15px 83px 14px 84px;
 
   font-family: $font;
   font-size: 17px;
@@ -94,30 +117,68 @@
 }
 
 @media (min-width: $tablet-width) {
-  .product-hit {
+  .product-hit__wrapper {
     position: relative;
-    padding: 40px 0 55px 0;
+    margin-top: -16px;
+
+    background-image: url("../img/bg-zigzag-fill.svg"), url("../img/bg-zigzag-line.svg");
+    background-repeat: repeat-x, repeat-x;
+    background-position: top, bottom;
+    background-size: auto 24px, auto 15px;
+    z-index: 10;
+  }
+
+  .product-hit {
+    display: flex;
+    flex-direction: column;
+
+    width: 668px;
+    position: relative;
+    padding: 57px 50px 43px 50px;
+    margin: 0 auto;
+    box-sizing: content-box;
+  }
+
+  .product-hit__promo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 49px;
   }
 
   .product-hit__title {
-    margin-bottom: 50px;
+    padding: 0;
+    margin: 0;
+    margin-left: -2px;
+    margin-right: 135px;
+
     font-size: 43px;
     line-height: 50px;
   }
 
   .product-hit__best-product {
-    position: absolute;
-    top: 50px;
-    right: 28px;
-    width: 70px;
+    width: 90px;
+    padding: 0;
+    margin: 0;
+    margin-top: 5px;
 
+    font-size: 17px;
     line-height: 17px;
     text-align: center;
   }
 
+  .product-hit__about {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .product-hit__text {
+    width: 50%;
+  }
+
   .product-hit__legend {
     width: 285px;
-    margin-bottom: 60px;
+    margin-bottom: 35px;
 
     font-size: 17px;
     line-height: 30px;
@@ -125,7 +186,7 @@
 
   .product-hit__table {
     width: 291px;
-    margin-bottom: 60px;
+    margin-bottom: 57px;
 
     line-height: 20px;
   }
@@ -134,19 +195,34 @@
     padding: 10px 0;
   }
 
-  .product-hit__image {
-    position: absolute;
-    bottom: 30px;
-    right: 0;
+  .product-hit__field {
+    width: 33%;
+  }
+
+  .product-hit__value {
+    width: 67%;
   }
 
   .product-hit__price {
-    margin-left: 72px;
     font-size: 20px;
+    text-align: start;
+    margin-left: 72px;
+    margin-bottom: 8px;
   }
 
   .product-hit .button {
+    margin-left: -2px;
     padding: 15px 99px;
+  }
+
+  .product-hit__picture {
+    width: 50%;
+  }
+
+  .product-hit__image {
+    width: 100%;
+    margin: 0;
+    height: auto;
   }
 }
 
