--- a/source/sass/site-list.scss
+++ b/source/sass/site-list.scss
@@ -10,7 +10,7 @@
 .site-list__item a {
   display: block;
   margin: 0;
-  padding: 30px 10px 30px 76px;
+  padding: 28px 10px 27px 76px;
   color: inherit;
   text-decoration: none;
   vertical-align: middle;
@@ -31,17 +31,17 @@
   .site-list {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
     width: 360px;
-    padding-left: 52px;
     font-size: 15px;
 
     box-sizing: border-box;
   }
 
   .site-list__item a {
-    padding: 20px 0;
+    padding: 17px 0;
+    margin-right: 37px;
     box-shadow: none;
   }
 }
@@ -49,23 +49,18 @@
 @media (min-width: $desktop-width) {
   .site-list {
     justify-content: flex-start;
-    width: 500px;
+    width: 450px;
 
     font-size: 17px;
-
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
   }
 
   .site-list__item a {
     padding: 32px 0;
     padding-right: 35px;
-  }
-
-  .site-list__item:nth-child(2n) a {
-    padding-left: 35px;
+    margin-right: 35px;
   }
 
   .site-list__item:first-child a {
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 0 0 0 rgba(0, 0, 0, 0.1);
   }
 }
