--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,8 @@
 @import "product.scss";
 @import "product-hit.scss";
 @import "advanteges.scss";
+@import "reviews.scss";
+@import "contacts.scss";
 @import "page-footer.scss";
 @import "copyright.scss";
 @import "buy-form.scss";
