--- a/source/sass/user-list.scss
+++ b/source/sass/user-list.scss
@@ -1,10 +1,7 @@
-.user-list {
-  list-style: none;
-}
-
 .user-list__item {
+  position: relative;
   margin: 0;
-  padding: 30px 10px 30px 76px;
+  padding: 28px 10px 27px 76px;
 
   font-size: 17px;
   line-height: 24px;
@@ -25,10 +22,18 @@
   vertical-align: middle;
   font-size: 17px;
   line-height: 24px;
+  color: inherit;
+  text-decoration: none;
 }
 
 .user-list__toggle {
-  display: none;
+  position: absolute;
+  top: 32px;
+  left: 27px;
+
+  border: none;
+  background: none;
+  opacity: 0.2;
 }
 
 .user-list__item input {
@@ -42,6 +47,13 @@
   border: none;
 }
 
+.user-list__basket {
+  position: absolute;
+  top: 31px;
+  left: 31px;
+  opacity: 0.2;
+}
+
 @media (min-width: $tablet-width) {
   .user-list {
     position: relative;
@@ -49,13 +61,18 @@
     justify-content: space-between;
     align-items: center;
 
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+    box-shadow: inset 1px 0 0 0 rgba(0, 0, 0, 0.1);
   }
 
   .user-list__toggle {
+    position: relative;
     display: block;
-    width: 82px;
+    top: auto;
+    left: auto;
+    margin: 0;
+    margin-top: 6px;
+    padding: 0;
+    width: 83px;
 
     background: none;
     border: none;
@@ -76,12 +93,21 @@
     box-shadow: none;
   }
 
-  .user-list__item a {
-    padding-left: 81px;
-    padding-top: 30px;
-    padding-bottom: 29px;
+  .user-list__item:nth-child(2) {
+    flex-grow: 1;
+  }
 
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
+  .user-list__item a {
+    padding-left: 82px;
+    padding-top: 31px;
+    padding-bottom: 33px;
+
+    box-shadow: inset 1px 0 0 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .user-list__basket {
+    top: 35px;
+    left: 32px;
   }
 
   .user-list__item:hover input {
@@ -91,7 +117,7 @@
 
 @media (min-width: $desktop-width) {
   .user-list {
-    width: 400px;
+    width: 350px;
   }
 
   .user-list__item a {
