--- a/source/sass/page-footer.scss
+++ b/source/sass/page-footer.scss
@@ -54,7 +54,7 @@
 
 @media (min-width: $desktop-width) {
   .page-footer {
-    width: 1150px;
-    padding: 23px 50px;
+    width: 1050px;
+    padding: 0 50px;
   }
 }
