--- a/source/sass/product.scss
+++ b/source/sass/product.scss
@@ -135,13 +135,14 @@
 
   .product__slogan {
     width: 650px;
-    margin-bottom: 350px;
+    margin-bottom: 360px;
 
     font-size: 53px;
     line-height: 57px;
   }
 
   .product__image {
+    width: 525px;
     padding-right: 380px;
 
     font-size: 20px;
