--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,4 +18,5 @@
 @import "buy-form.scss";
 @import "catalog-main.scss";
 @import "catalog-product.scss";
+@import "catalog-video.scss";
 @import "social.scss";
