--- a/source/sass/action-list.scss
+++ b/source/sass/action-list.scss
@@ -2,8 +2,7 @@
   .action-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 318px;
+    width: 800px;
     margin: 0;
     padding: 0;
 
@@ -18,7 +17,8 @@
   .action-list__item a {
     display: inline-block;
     margin: 0;
-    padding: 20px 0;
+    margin-right: 62px;
+    padding: 18px 0;
 
     font-style: $font;
     font-size: 15px;
