--- a/source/sass/catalog-main.scss
+++ b/source/sass/catalog-main.scss
@@ -4,9 +4,13 @@
   padding: 0 1px;
 }
 
+.catalog-main__wrapper {
+  background-color: #f1f1f1;
+}
+
 .catalog-main__title {
   margin: 0;
-  padding: 70px 0;
+  padding: 70px 0 76px 0;
 
   font-family: $font;
   font-size: 27px;
@@ -14,8 +18,6 @@
   font-weight: bold;
   text-align: center;
   color: #000000;
-
-  background-color: #f1f1f1;
 }
 
 .catalog-main__list {
@@ -23,7 +25,7 @@
   flex-direction: column;
   align-items: center;
   margin: 0;
-  padding: 30px;
+  padding: 30px 30px 0 30px;
 
   list-style: none;
 }
@@ -36,14 +38,23 @@
 
 @media (min-width: $tablet-width) {
   .catalog-main {
-    width: 772px;
-    margin: 0 auto;
+    width: 100%;
+  }
+
+  .catalog-main__wrapper {
+    margin-top: -58px;
+
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-repeat: repeat-x;
+    background-position: bottom;
+    background-size: auto 24px;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
 
   .catalog-main__title {
     width: 668px;
     margin: 0 auto;
-    padding: 70px 52px;
+    padding: 95px 50px;
     font-size: 43px;
     line-height: 50px;
   }
@@ -51,7 +62,7 @@
   .catalog-main__list {
     width: 668px;
     margin: 0 auto;
-    padding: 65px 52px;
+    padding: 64px 50px 0 50px;
   }
 
   .catalog-main__item {
@@ -60,14 +71,16 @@
 }
 
 @media (min-width: $desktop-width) {
-  .catalog-main {
-    width: 1150px;
+  .catalog-main__wrapper {
+    margin-top: -60px;
+
+    background-size: auto 34px;
   }
 
   .catalog-main__title {
     width: 1050px;
     margin: 0 auto;
-    padding: 60px 50px 85px 50px;
+    padding: 98px 50px 124px 50px;
     font-size: 53px;
     line-geight: 57px;
   }
