--- a/source/sass/catalog-product.scss
+++ b/source/sass/catalog-product.scss
@@ -2,14 +2,14 @@
   margin-bottom: 30px;
 }
 
-.catalog-product__image {
-  width: 260px;
+.catalog-product__picture {
+  width: 100%;
   height: 195px;
 }
 
 .catalog-product__promo {
   margin: 0;
-  padding: 28px;
+  padding: 26px 26px 27px 28px;
 
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -28,7 +28,7 @@
 
 .catalog-product__legend {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 19px;
   padding: 0;
 
   font-family: $font;
@@ -38,7 +38,10 @@
 }
 
 .catalog-product__price-and-buy {
-  padding-top: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 21px;
 
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -51,30 +54,51 @@
   color: #000000;
 }
 
+.catalog-product__basket {
+  margin-top: 2px;
+}
+
+.catalog-product__icon {
+  path {
+    fill: rgba(0, 0, 0, 0.2);
+  }
+}
+
 @media (min-width: $tablet-width) {
   .catalog-product {
     display: flex;
+    margin-bottom: 54px;
+  }
+
+  .catalog-product__picture {
+    width: 50%;
+    height: 334px;
   }
 
   .catalog-product__image {
-    width: 334px;
-    height: 334px;
+    width: 100%;
+    height: auto;
   }
 
   .catalog-product__promo {
     display: flex;
     flex-direction: column;
-    width: 334px;
+    width: 50%;
+    padding: 26px 31px 27px 31px;
 
     box-sizing: border-box;
   }
 
   .catalog-product__title {
+    margin-left: -4px;
+
     font-size: 20px;
     line-height: 24px;
   }
 
   .catalog-product__legend {
+    margin-left: -4px;
+
     font-size: 15px;
     line-height: 30px;
   }
@@ -93,15 +117,30 @@
   .catalog-product {
     flex-direction: column;
     width: 316px;
+    margin: 0;
   }
 
-  .catalog-product__image {
+  .catalog-product__picture {
     width: 316px;
     height: 462px;
   }
 
   .catalog-product__promo {
     width: 316px;
+    padding: 24px 30px 26px 28px;
     flex-grow: 1;
+  }
+
+  .catalog-product__title {
+    margin-left: -1px;
+  }
+
+  .catalog-product__legend {
+    margin-bottom: 14px;
+    margin-left: -1px;
+  }
+
+  .catalog-product__price-and-buy {
+    padding-top: 22px;
   }
 }
