--- a/source/sass/contacts.scss
+++ b/source/sass/contacts.scss
@@ -46,6 +46,15 @@
   width: 70%;
 }
 
+.contacts__value a {
+  display: inline-block;
+  vertical-align: middle;
+
+  color: #444444;
+  text-decoration: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 .contacts__map {
   margin-left: -29px;
   margin-bottom: 40px;
@@ -84,11 +93,24 @@
   }
 
   .contacts__title {
+    position: relative;
     margin-left: -5px;
     margin-bottom: 48px;
 
     font-size: 43px;
     line-height: 50px;
+  }
+
+  .contacts__title::before {
+    content: "";
+    position: absolute;
+    top: -15px;
+    right: 2px;
+    width: 47px;
+    height: 81px;
+
+    background-image: url("../img/icon-flag.svg");
+    background-repeat: no-repeat;
   }
 
   .contacts__table {
@@ -115,6 +137,13 @@
     width: auto;
   }
 
+  .contacts__map {
+    width: 768px;
+    margin-left: -50px;
+
+    background-image: url("../img/map-tablet@1x.jpg");
+  }
+
   .contacts__write {
     width: 230px;
     margin-top: 15px;
@@ -122,5 +151,57 @@
 
     font-size: 17px;
     line-height: 20px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .contacts {
+    width: 1050px;
+    padding: 140px 50px 105px 50px;
+  }
+
+  .contacts__wrapper {
+    width: 50%;
+    position: relative;
+  }
+
+  .contacts__title {
+    margin-left: 171px;
+    margin-bottom: 47px;
+
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .contacts__title::before {
+    left: -108px;
+    top: -8px;
+  }
+
+  .contacts__table {
+    margin-left: 173px;
+    margin-bottom: 62px;
+  }
+
+  .contacts__table tbody {
+    flex-direction: column;
+  }
+
+  .contacts__field {
+    padding-right: 24px;
+  }
+
+  .contacts__map {
+    position: absolute;
+    right: -100%;
+    bottom: 0;
+    margin: 0;
+
+    width: 100%;
+    background-image: url("../img/map-desktop@1x.jpg");
+  }
+
+  .contacts__write {
+    margin-left: 175px;
   }
 }
