--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -6,6 +6,7 @@
 
 .page-main__wrapper {
   position: relative;
+  background-color: #f9f9f9;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -18px;
@@ -23,7 +24,6 @@
 
     background-image: url("../img/hero-tablet@1x.jpg");
     background-position: center 0;
-    background-size: cover;
 
     box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
   }
@@ -32,7 +32,7 @@
 @media (min-width: $desktop-width) {
   .page-main__wrapper {
     position: relative;
-    margin-top: -65px;
+    margin-top: -60px;
 
     background-image: url("../img/hero-desktop@1x.jpg");
   }
