--- a/source/sass/reviews.scss
+++ b/source/sass/reviews.scss
@@ -163,3 +163,39 @@
     box-shadow: none;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .reviews__wrapper {
+    padding-bottom: 89px;
+
+    background-size: auto 23px;
+  }
+
+  .reviews {
+    width: 1050px;
+    padding: 71px 50px 55px 50px;
+
+    background-position: 50px 0;
+  }
+
+  .reviews__title {
+    margin-left: 172px;
+
+    font-size: 53px;
+    line-height: 57px;
+  }
+
+  .reviews__write {
+    margin-top: 7px;
+  }
+
+  .reviews__text {
+    width: 778px;
+    margin-left: 175px;
+    margin-bottom: 39px;
+  }
+
+  .reviews__author {
+    margin-left: 175px;
+  }
+}
