--- a/source/sass/catalog-video.scss
+++ b/source/sass/catalog-video.scss
@@ -83,7 +83,7 @@
   }
 
   .catalog-video__title {
-    padding: 37px 30px 0px 106px;
+    padding: 37px 30px 0 106px;
 
     font-size: 20px;
     line-height: 24px;
