--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,6 @@
 $font: "OpenSans", "Arial", serif;
-$tablet-width: 772px;
+$tablet-width: 768px;
 $desktop-width: 1150px;
-$mobile-width-only: 771px;
+$mobile-width-only: 767px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
