--- a/source/sass/contacts.scss
+++ b/source/sass/contacts.scss
@@ -61,8 +61,14 @@
   width: 320px;
   height: 457px;
 
-  background-image: url("../img/map-mobile@1x.jpg");
-  background-repeat: no-repeat;
+  background-image: url("../img/icon-map-pin.svg"), url("../img/map-mobile@1x.jpg");
+  background-repeat: no-repeat, no-repeat;
+  background-size: 67px 100px, 322px auto;
+  background-position: 139px 145px, 0 0;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/icon-map-pin.svg"), url("../img/map-mobile@2x.jpg");
+  }
 }
 
 .contacts__write {
@@ -141,7 +147,13 @@
     width: 768px;
     margin-left: -50px;
 
-    background-image: url("../img/map-tablet@1x.jpg");
+    background-image: url("../img/icon-map-pin.svg"), url("../img/map-tablet@1x.jpg");
+    background-size: 67px 100px, 768px auto;
+    background-position: 363px 139px, 0 0;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/icon-map-pin.svg"), url("../img/map-tablet@2x.jpg");
+    }
   }
 
   .contacts__write {
@@ -198,7 +210,13 @@
     margin: 0;
 
     width: 100%;
-    background-image: url("../img/map-desktop@1x.jpg");
+    background-image: url("../img/icon-map-pin.svg"), url("../img/map-desktop@1x.jpg");
+    background-size: 67px 100px, 525px auto;
+    background-position: 239px 146px, 0 0;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/icon-map-pin.svg"), url("../img/map-desktop@2x.jpg");
+    }
   }
 
   .contacts__write {
