--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -136,9 +136,13 @@
 
   .main-nav__logo {
     width: 321px;
-    min-height: 88px;
-    padding: 22px 0;
+    padding: 22px 0 17px 0;
     box-sizing: border-box;
+  }
+
+  .main-nav__logo-image {
+    width: 112px;
+    height: auto;
   }
 
   .main-nav__toggle {
@@ -180,10 +184,15 @@
   }
 
   .main-nav__logo {
-    width: 200px;
-    padding: 9px 0 7px 0;
+    width: 250px;
+    padding: 9px 0 3px 0;
     min-height: 88px;
     order: 2;
+  }
+
+  .main-nav__logo-image {
+    width: 149px;
+    height: auto;
   }
 
   .main-nav__action {
