--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -11,6 +11,10 @@
   background-repeat: no-repeat;
   background-position: center -18px;
   z-index: 0;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -26,6 +30,10 @@
     background-position: center 0;
 
     box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.1);
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-tablet@2x.jpg");
+    }
   }
 }
 
@@ -35,5 +43,9 @@
     margin-top: -60px;
 
     background-image: url("../img/hero-desktop@1x.jpg");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/hero-desktop@2x.jpg");
+    }
   }
 }
