Правки для сдачи проета

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,4 +19,5 @@
 @import "catalog-main.scss";
 @import "catalog-product.scss";
 @import "catalog-video.scss";
+@import "form-main.scss";
 @import "social.scss";
