--- a/source/sass/block/action-list.scss
+++ b/source/sass/block/action-list.scss
@@ -27,5 +27,13 @@
     color: #000000;
 
     text-decoration: none;
+
+    &:hover {
+      color: rgba(0, 0, 0, 0.6);
+    }
+
+    &:active {
+      color: rgba(0, 0, 0, 0.3);
+    }
   }
 }
