--- a/source/sass/block/catalog-video.scss
+++ b/source/sass/block/catalog-video.scss
@@ -40,16 +40,26 @@
   height: 150px;
 }
 
-.catalog-video__image::before {
-  content: "";
+.catalog-video__replay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+}
 
-  background-image: url("../img/icon-play.svg");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: 102px 78px;
+.catalog-video__replay:hover svg {
+  width: 121px;
+  height: 92px;
+}
+
+.catalog-video__replay:active svg {
+  width: 81px;
+  height: 62px;
+  opacity: 0.3;
 }
 
 .catalog-video__promo {
