--- a/source/sass/block/contacts.scss
+++ b/source/sass/block/contacts.scss
@@ -52,7 +52,15 @@
 
   color: #444444;
   text-decoration: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid #46c1ae;
+
+  &:hover {
+    color: #46c1ae;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .contacts__map {
