--- a/source/sass/block/form-main.scss
+++ b/source/sass/block/form-main.scss
@@ -115,6 +115,14 @@
   border-radius: 50%;
   box-sizing: border-box;
   cursor: pointer;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:active {
+    border-color: rgba(68, 68, 68, 0.3);
+  }
 }
 
 .form-main__radio input[type="radio"]:checked + .form-main__radio-indicator {
@@ -128,6 +136,14 @@
   border: 2px solid #444444;
   border-radius: 50%;
   box-sizing: border-box;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:active {
+    border-color: rgba(68, 68, 68, 0.3);
+  }
 }
 
 .form-main__radio input[type="radio"]:checked + .form-main__radio-indicator::before {
@@ -170,6 +186,14 @@
   border: 2px solid #444444;
   box-sizing: border-box;
   cursor: pointer;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:active {
+    border-color: rgba(68, 68, 68, 0.3);
+  }
 }
 
 .form-main__checkbox input[type="checkbox"]:checked + .form-main__checkbox-indicator::before {
@@ -184,6 +208,14 @@
   background-image: url("../img/icon-tick.svg");
   background-repeat: no-repeat;
   cursor: pointer;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:active {
+    border-color: rgba(68, 68, 68, 0.3);
+  }
 }
 
 .form-main__user {
@@ -217,6 +249,21 @@
 
   border: none;
   border-bottom: 2px solid #000000;
+  outline: none;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:focus {
+    border-color: #62d1ba;
+    color: #444444;
+  }
+}
+
+.form-main__phone,
+.form-main__email {
+  position: relative;
 }
 
 .form-main__phone .form-main__legend,
@@ -230,12 +277,24 @@
   margin-bottom: 34px;
   padding: 0;
   padding-bottom: 13px;
+  padding-right: 40px;
 
   font-size: 19px;
   line-height: 18px;
 
   border: none;
   border-bottom: 2px solid #000000;
+  box-sizing: border-box;
+  outline: none;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:focus {
+    border-color: #62d1ba;
+    color: #444444;
+  }
 }
 
 .form-main__email {
@@ -253,12 +312,55 @@
   margin-bottom: 34px;
   padding: 0;
   padding-bottom: 16px;
+  padding-right: 40px;
 
   font-size: 17px;
   line-height: 18px;
 
   border: none;
   border-bottom: 2px solid #000000;
+  box-sizing: border-box;
+  outline: none;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:focus {
+    border-color: #62d1ba;
+    color: #444444;
+  }
+}
+
+.form-main__icon {
+  position: absolute;
+}
+
+.form-main__icon svg {
+  opacity: 0.2;
+}
+
+.form-main__icon--phone {
+  top: 32px;
+  right: 8px;
+}
+
+.form-main__icon--mail {
+  top: 33px;
+  right: 4px;
+}
+
+.form-main__phone:hover svg {
+  fill: #62d1ba;
+  opacity: 1;
+}
+
+.form-main__email:hover svg {
+  opacity: 1;
+
+  path {
+    fill: #62d1ba;
+  }
 }
 
 .form-main__yourself {
@@ -279,6 +381,16 @@
 
   border: 2px solid #000000;
   box-sizing: border-box;
+  outline: none;
+
+  &:hover {
+    border-color: #62d1ba;
+  }
+
+  &:focus {
+    border-color: #62d1ba;
+    color: #444444;
+  }
 }
 
 .form-main__footnote {
@@ -541,6 +653,7 @@
     margin-top: -6px;
     padding-left: 17px;
     padding-bottom: 12px;
+    padding-right: 70px;
 
     font-size: 19px;
     line-height: 18px;
@@ -555,6 +668,16 @@
 
   .form-main__email {
     display: flex;
+  }
+
+  .form-main__icon--phone {
+    top: -6px;
+    right: 27px;
+  }
+
+  .form-main__icon--mail {
+    top: -7px;
+    right: 22px;
   }
 
   .form-main__yourself {
@@ -670,6 +793,16 @@
   .form-main__author {
     width: 700px;
     flex-grow: 0;
+  }
+
+  .form-main__icon--phone {
+    top: -8px;
+    right: 184px;
+  }
+
+  .form-main__icon--mail {
+    top: -8px;
+    right: 180px;
   }
 
   .form-main__contacts {
