--- a/source/sass/block/main-nav.scss
+++ b/source/sass/block/main-nav.scss
@@ -18,6 +18,14 @@
   margin: 0;
   padding: 22px 0 19px 0;
   width: 86px;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .main-nav__toggle {
