--- a/source/sass/block/product-hit.scss
+++ b/source/sass/block/product-hit.scss
@@ -98,7 +98,7 @@
   text-align: center;
 }
 
-.product-hit .button {
+.product-hit__button {
   display: inline-block;
   vertical-align: middle;
   margin: 0;
@@ -206,7 +206,7 @@
     margin-bottom: 8px;
   }
 
-  .product-hit .button {
+  .product-hit__button {
     margin-left: -2px;
     padding: 15px 99px;
   }
@@ -270,7 +270,7 @@
     padding: 7px 0 13px 0;
   }
 
-  .product-hit .button {
+  .product-hit__button {
     width: 292px;
     padding-bottom: 14px;
 
