--- a/source/sass/block/social.scss
+++ b/source/sass/block/social.scss
@@ -6,6 +6,22 @@
   }
 }
 
+.social__link svg {
+  &:hover {
+    path {
+      fill: #46c1ae;
+    }
+  }
+
+  &:active {
+    opacity: 0.3;
+
+    path {
+      fill: #46c1ae;
+    }
+  }
+}
+
 @media (min-width: $tablet-width) {
   .social {
     margin-top: 7px;
