--- a/source/sass/block/user-list.scss
+++ b/source/sass/block/user-list.scss
@@ -7,6 +7,15 @@
   line-height: 24px;
 
   box-shadow: 0 1px 0 0 #ececec, inset 0 1px 0 0 #ececec;
+}
+
+.user-list__item a {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 17px;
+  line-height: 24px;
+  color: inherit;
+  text-decoration: none;
 
   &:hover {
     color: rgba(0, 0, 0, 0.6);
@@ -17,23 +26,30 @@
   }
 }
 
-.user-list__item a {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 17px;
-  line-height: 24px;
-  color: inherit;
-  text-decoration: none;
-}
-
 .user-list__toggle {
   position: absolute;
   top: 32px;
   left: 27px;
 
   border: none;
+  outline: none;
   background: none;
   opacity: 0.2;
+  cursor: pointer;
+}
+
+.user-list__toggle:hover {
+  opacity: 1;
+}
+
+.user-list__toggle:hover svg {
+  path {
+    fill: #63d1bb;
+  }
+}
+
+.user-list__toggle:active {
+  opacity: 0.3;
 }
 
 .user-list__item input {
@@ -52,6 +68,18 @@
   top: 31px;
   left: 31px;
   opacity: 0.2;
+}
+
+.user-list__item:hover .user-list__basket {
+  opacity: 1;
+
+  path {
+    fill: #63d1bb;
+  }
+}
+
+.user-list__item:active .user-list__basket {
+  opacity: 0.3;
 }
 
 @media (min-width: $tablet-width) {
@@ -108,10 +136,6 @@
   .user-list__basket {
     top: 35px;
     left: 32px;
-  }
-
-  .user-list__item:hover input {
-    display: block;
   }
 }
 
