--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -19,3 +19,14 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.button {
+  &:hover {
+    background-color: #444444;
+    color: #ffffff;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
+}
