--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,22 +2,22 @@
 @import "normalize.scss";
 @import "scaffolding.scss";
 @import "variables.scss";
-@import "page-header.scss";
-@import "main-nav.scss";
-@import "site-list.scss";
-@import "user-list.scss";
-@import "action-list.scss";
-@import "page-main.scss";
-@import "product.scss";
-@import "product-hit.scss";
-@import "advanteges.scss";
-@import "reviews.scss";
-@import "contacts.scss";
-@import "page-footer.scss";
-@import "copyright.scss";
-@import "buy-form.scss";
-@import "catalog-main.scss";
-@import "catalog-product.scss";
-@import "catalog-video.scss";
-@import "form-main.scss";
-@import "social.scss";
+@import "block/page-header.scss";
+@import "block/main-nav.scss";
+@import "block/site-list.scss";
+@import "block/user-list.scss";
+@import "block/action-list.scss";
+@import "block/page-main.scss";
+@import "block/product.scss";
+@import "block/product-hit.scss";
+@import "block/advanteges.scss";
+@import "block/reviews.scss";
+@import "block/contacts.scss";
+@import "block/page-footer.scss";
+@import "block/copyright.scss";
+@import "block/buy-form.scss";
+@import "block/catalog-main.scss";
+@import "block/catalog-product.scss";
+@import "block/catalog-video.scss";
+@import "block/form-main.scss";
+@import "block/social.scss";
