--- a/source/sass/block/contacts.scss
+++ b/source/sass/block/contacts.scss
@@ -31,7 +31,7 @@
 }
 
 .contacts__table tr:first-child {
-  margin-bottom: 28px;
+  margin-bottom: 25px;
 }
 
 .contacts__table td {
@@ -47,6 +47,7 @@
 }
 
 .contacts__value a {
+  margin: 0;
   display: inline-block;
   vertical-align: middle;
 
@@ -77,6 +78,12 @@
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/icon-map-pin.svg"), url("../img/map-mobile@2x.jpg");
   }
+}
+
+.contacts__map iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 .contacts__write {
