--- a/source/sass/block/catalog-main.scss
+++ b/source/sass/block/catalog-main.scss
@@ -44,7 +44,7 @@
   .catalog-main__wrapper {
     margin-top: -58px;
 
-    border-top: 1px solid rgba(0, 0, 0, 0.1)
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
   }
 
   .catalog-main__title {
